爬虫程序修改

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//com/vi/climb/NormalToClimbData.py=utf-8
 encoding//com/vi/climb/ThreadToClimbData.py=UTF-8
+encoding//com/vi/test/Test.py=UTF-8
